--- a/style.css
+++ b/style.css
@@ -84,3 +84,10 @@ body{
 .weather{
     display: none;
 }
+.error{
+    text-align: left;
+    margin-right: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display:none;
+}
